--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">AutoFriend</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
     <string name="service_toggle_text">AutoFriend\nService</string>
+    <string name="app_settings">Settings</string>
 
 </resources>
