--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="service_toggle_text">AutoFriend\nService</string>
     <string name="app_settings">Settings</string>
+    <string name="app_about">About</string>
 
 </resources>
